# qiymetleri.com

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  DATA_LICENSE.md  LICENSE  NOTICE  README.md  SECURITY.md  TRADEMARKS.md  docker-compose.override.yml  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260718_0001_initial_schema.py  20260719_0002_scraper_operations.py  20260722_0003_comparison_expand.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: router.py
backend/app/core/: cache.py  config.py  database.py  origin.py
backend/app/models/: __init__.py  comparison.py  product.py  scraper.py
backend/app/schemas/: admin.py  product.py
backend/app/services/: admin_service.py  matching_service.py  model_backfill_service.py  model_mapping_service.py  product_service.py  spec_ingestion_service.py
backend/scripts/: backfill_product_models.py  match_products.py  normalize_products.py  rebuild_canonical_ids.py  seed_demo.py  seed_spec_taxonomy.py  snapshot_comparison_pilot.py  verify_phase1.py
backend/tests/: test_admin_auth.py  test_config.py  test_filters.py  test_health.py  test_matching_service.py  test_model_backfill_service.py  test_seed_demo.py  test_snapshot_comparison_pilot.py  test_spec_ingestion_service.py
scraper/: Dockerfile  celery_app.py  pyproject.toml  scrapy.cfg  tasks.py
scraper/qiymetleri_scraper/: items.py  settings.py
scraper/qiymetleri_scraper/middlewares/: proxy_middleware.py
scraper/tests/: test_scrapers.py
(+126 files in other folders)
