[tool.poetry]
name = "qiymetleri-backend"
version = "0.1.0"
description = "qiymetleri.com - Price comparison API for Azerbaijan"
authors = ["qiymetleri <info@qiymetleri.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = ">=0.115.0"
uvicorn = {extras = ["standard"], version = ">=0.34.0"}
sqlalchemy = {extras = ["asyncio"], version = ">=2.0.40"}
asyncpg = ">=0.30.0"
alembic = ">=1.15.0"
pydantic-settings = ">=2.8.0"
redis = ">=5.2.0"
celery = {extras = ["redis"], version = ">=5.4.0"}
httpx = ">=0.28.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.25.0"
ruff = ">=0.9.0"
black = ">=25.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.black]
target-version = ["py313"]
line-length = 88
